Tag count overflow fix

--- a/static/main.css
+++ b/static/main.css
@@ -98,7 +98,7 @@ dd + dt { margin-top: 1em; }
 .tag.license:hover { color: #444; background-color: #FFFF8C; }
 .tag.lang:hover { color: #444; background-color: #9CFFFF; }
 .tag.framework:hover { color: #444; background-color: #FF786B; }
-.tag-pill { margin: 0 -7px 0 6px; padding: 2px 6px;
+.tag-badge { margin: 0 -6px 0 6px; padding: 2px 6px;
             color: #666; background-color: #ddd; }
 
 #filter {
